language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_return_type.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_function_return_type.move:5:17 ───
   │
 5 │     fun foo():  CupC<R> {
   │                 ^^^^^^^ 'copy' constraint not satisifed
   ·
 5 │     fun foo():  CupC<R> {
   │                      - The type '0x8675309::M::R' does not have the ability 'copy'
   ·
 3 │     struct R {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
 2 │     struct CupC<T: copy> {}
   │                    ---- 'copy' constraint declared here
   │

