language/move-lang/tests/move_check/typing/constraints_not_satisfied_function_return_type.move
module 0x8675309::M {
    struct CupC<T: copy> {}
    struct R {}

    fun foo():  CupC<R> {
        abort 0
    }
}
